sandbox/output
TicketDispenserTest.java:60: error: cannot find symbol
        mockTurnNumberSequence.verifyMethodGetNextTurnNumberCalled();
                              ^
  symbol:   method verifyMethodGetNextTurnNumberCalled()
  location: variable mockTurnNumberSequence of type MockTurnNumberSequence
1 error
